--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
   --black: #202024;
   --gray: #e1e1e6;
   color: var(--gray);
-  background-color: var(--black);
+  background-color: var(--gray);
 }
 
 main {
@@ -18,7 +18,7 @@ main {
   height: 812px;
   background-image: url(imagens/background.svg);
   background-size: auto;
-  margin: 3rem auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -61,4 +61,10 @@ main #about {
 main #links {
   display: flex;
   gap: 0.5rem;
+}
+
+@media screen and (min-width: 400px) {
+  main {
+    margin: 5rem auto;
+  }
 }
